bug fix: line break in "forgot password"

--- a/app/assets/stylesheets/topics.scss
+++ b/app/assets/stylesheets/topics.scss
@@ -99,7 +99,8 @@ i.red{
   -webkit-box-shadow: 2px rgba(0,0,0,0.25);
 
   h3 {
-      font-size: 20px !important;
+    color: #2475D1 !important;
+    font-size: 20px !important;
   }
 
   .topic-deadline {
@@ -227,7 +228,7 @@ i.red{
 }
 
 .pindan-content {
-    h3 {
+  h3 {
         font-size: 16px !important;
         margin: 0 0 20px;
     }
