--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -300,7 +300,7 @@ margin-bottom: 0px;
   text-align: center;
 }
 .signup-panel .button {
-  margin-left: 35%;
+  /*margin-left: 35%;*/
 }
 
 .newusers {
